--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* Default styles for larger screens (e.g., tablets and desktops) */
 .App {
   text-align: center;
   background-color: #282c34;
@@ -24,34 +25,34 @@
 
 .score-labels {
   display: flex;
-  font-size: 24px;
-  margin: 10px 0;
+  font-size: 3vmin;
+  margin: 1.5vmin 0;
 }
 
 .score-label {
   background-color: #5bc072;
   color: white;
-  padding: 10px;
-  margin: 0 10px;
+  padding: 2vmin;
+  margin: 0 2vmin;
   border-radius: 5px;
 }
 
 .score-label p {
   margin: 0;
-  width: 150px;
+  width: 10vmax;
 }
 
 input {
-  padding: 15px;
-  font-size: 40px;
-  margin: 25px 5px;
-  width: 100px;
+  padding: 3vmin;
+  font-size: 5vmin;
+  margin: 6vmin 1vmin;
+  width: 30vmin;
   text-align: center;
 }
 
 button {
-  padding: 10px 60px;
-  font-size: 40px;
+  padding: 2vmin 12vmin;
+  font-size: 5vmin;
   background-color: #039e5d;
   color: white;
   border: none;
@@ -60,4 +61,9 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+/* Prevent horizontal overflow on small screens */
+body {
+  overflow-x: hidden;
 }
